--- a/server.html
+++ b/server.html
@@ -13,28 +13,80 @@
         color: #fff;
         display: flex;
         min-height: 100vh;
+        transition: transform 0.3s ease-in-out;
     }
-    .sidebar {
-        width: 50px;
-        background-color: #128C7E;
-        padding: 20px 0;
-        text-align: center;
-        transition: width 0.3s;
-        overflow: hidden;
-        position: relative;
+    .drawer-overlay {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 1000;
+        transition: opacity 0.3s ease-in-out;
     }
-    .sidebar:hover {
+    .drawer {
         width: 250px;
+        height: 100%;
+        background-color: #128C7E;
+        padding: 10px;
+        transition: transform 0.3s ease-in-out;
+        transform: translateX(-100%);
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 1001;
     }
-    .sidebar a {
+    .drawer.open {
+        transform: translateX(0);
+    }
+    .drawer a {
         color: #fff;
         text-decoration: none;
         display: block;
-        padding: 10px 20px;
+        padding: 10px 0;
+    }
+    .drawer a:hover {
+        background-color: rgba(255, 255, 255, 0.1);
+    }
+    .menu-toggle {
+        display: block;
+        position: fixed;
+        top: 20px;
+        left: 20px;
+        cursor: pointer;
+        z-index: 1002;
+        transition: transform 0.3s ease-in-out;
+    }
+    .menu-toggle span {
+        display: block;
+        width: 25px;
+        height: 3px;
+        background-color: #fff;
+        margin-bottom: 5px;
+        transition: transform 0.3s ease-in-out;
+    }
+    .menu-toggle.open span:first-child {
+        transform: translateY(8px) rotate(45deg);
+    }
+    .menu-toggle.open span:nth-child(2) {
+        opacity: 0;
+    }
+    .menu-toggle.open span:last-child {
+        transform: translateY(-8px) rotate(-45deg);
+    }
+    .menu-toggle.open {
+        display: none;
     }
     .content {
         flex: 1;
         padding: 20px;
+        transition: margin-left 0.3s ease-in-out;
+        margin-left: 0;
+    }
+    .content.open {
+        margin-left: 270px; /* Increased margin for the drawer */
     }
     h1 {
         color: #075e54;
@@ -72,35 +124,59 @@
         border-radius: 10px;
         margin: 20px auto;
         text-align: center;
+        overflow-y: auto;
+        max-height: 200px;
+    }
+
+    /* Close button style */
+    .close-btn {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        cursor: pointer;
+        color: #fff;
+        font-size: 20px;
     }
 </style>
 </head>
 <body>
-    <div class="sidebar">
-        <a href="#" onclick="toggleSidebar()">Menu</a>
-        <div id="menuContent" style="display: none;">
-            <button>Contact Us</button>
-            <button>Services</button>
-            <button>About Us</button>
-        </div>
+    <div class="drawer-overlay" id="drawerOverlay" onclick="toggleDrawer()"></div>
+    <div class="drawer" id="drawer">
+        <span class="close-btn" onclick="toggleDrawer()">X</span>
+        <a href="#">Contact Us</a>
+        <a href="#">Services</a>
+        <a href="#">About Us</a>
     </div>
-    <div class="content">
+    <div class="menu-toggle" id="menuToggle" onclick="toggleDrawer()">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+    <div class="content" id="content">
         <h1>About WhatsApp Bot</h1>
         <p>Your friendly WhatsApp bot!</p>
         <p><span class="typing-animation">Status: Connected</span></p>
         <div class="orange-box">
-            <p>Device Info: <span id="deviceInfoOrange"></span></p>
+            <img src="path_to_your_image.jpg" alt="WhatsApp Bot Image" style="width: 100%; max-width: 150px; margin-bottom: 10px;">
+            <h3>A platform where convenience meets technology!</h3>
         </div>
         <h2>Links</h2>
         <ul>
-            <li><a href="https://github.com/your_username">GitHub</a></li>
-            <li><a href="https://instagram.com/your_username">Instagram</a></li>
+            <li><a href="https://github.com/gssbotwa">GitHub</a></li>
+            <li><a href="https://instagram.com/ethix_xsid">Instagram</a></li>
         </ul>
     </div>
     <script>
-        function toggleSidebar() {
-            var menuContent = document.getElementById('menuContent');
-            menuContent.style.display = menuContent.style.display === 'block' ? 'none' : 'block';
+        function toggleDrawer() {
+            var drawer = document.getElementById('drawer');
+            var drawerOverlay = document.getElementById('drawerOverlay');
+            var content = document.getElementById('content');
+            var menuToggle = document.getElementById('menuToggle');
+            
+            drawer.classList.toggle('open');
+            drawerOverlay.style.display = drawer.classList.contains('open') ? 'block' : 'none';
+            content.classList.toggle('open');
+            menuToggle.classList.toggle('open');
         }
 
         // Function to get device information for orange box
